# data-dictionary-generator

./: .dockerignore  .env.postgresql.example  .env.sqlite.example  .gitignore  .pre-commit-config.yaml  .semgrep.yml  .semgrepignore  QUICKSTART.md  README.md  SECURITY_QUICKSTART.md  docker-compose.yml  sample-data.json
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  install_dependencies.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_server.sh  validate_processors.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_11_09_0944-0cf0e9fac7fa_initial_schema_with_dictionaries_.py  2025_11_12_1640-025d9be916ff_add_performance_indexes.py
backend/scripts/: setup.sh  verify.sh
backend/src/: main.py
backend/src/api/: dependencies.py  middlewares.py
backend/src/api/v1/: database.py  dictionaries.py  exports.py  search.py  versions.py
backend/src/core/: config.py  database.py  exceptions.py  logging.py  security.py
backend/src/exporters/: __init__.py  base.py  excel_exporter.py
backend/src/models/: __init__.py  annotation.py  base.py  dictionary.py  field.py  version.py
backend/src/processors/: IMPLEMENTATION_NOTES.md  README.md  __init__.py  ai_generator.py  geopackage_parser.py  json_parser.py  mongodb_parser.py  pii_detector.py  protobuf_parser.py  quality_analyzer.py  semantic_detector.py  sqlite_parser.py  timeout_utils.py  type_inferrer.py  xml_parser.py  xml_schema_parser.py
backend/src/repositories/: QUICK_REFERENCE.md  __init__.py  annotation_repo.py  base.py  dictionary_repo.py  field_repo.py  version_repo.py
backend/src/schemas/: __init__.py  common.py  dictionary.py  export.py  field.py  version.py
backend/src/services/: ARCHITECTURE.txt  SERVICE_IMPLEMENTATION.md  __init__.py  analysis_service.py  database_service.py  dictionary_service.py  export_service.py  import_service.py  version_service.py
backend/tests/: conftest.py  test_health.py
backend/tests/integration/: test_mongodb_dictionary_creation.py
backend/tests/unit/: test_mongodb_parser.py
docs/: CONOPS.md  QUICK_START.md  README.md  REQUIREMENTS.md
docs/deployment/: DOCKER_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT.md
docs/guides/: MIGRATION_GUIDE.md  OPENAI_CONFIGURATION.md  QUICK_START.md
docs/reference/: ARCHITECTURE_DIAGRAM.txt  SECURITY.md  SOFTWARE_DESIGN.md  XML_DTD_XSD_SUPPORT.md
docs/samples/: SAMPLE_DATA_README.md  SAMPLE_XML_README.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  database.ts  dictionaries.ts  fields.ts  index.ts  search.ts  versions.ts
frontend/src/components/common/: EmptyState.tsx  ErrorBoundary.tsx  ErrorBoundaryDemo.tsx  InfoModal.tsx  README.md
frontend/src/components/dictionaries/: FieldDetailPanel.tsx  FieldExplorer.tsx
frontend/src/components/fields/: FieldStatistics.tsx  index.ts
frontend/src/components/layout/: DocsContent.tsx  DocsDrawer.tsx  MainLayout.tsx
frontend/src/components/ui/: button.tsx
frontend/src/components/upload/: UploadProgress.tsx  index.ts
frontend/src/components/versions/: VersionComparison.tsx  VersionSelector.tsx  VersionTimeline.tsx  index.ts
frontend/src/hooks/: useDatabase.ts  useDictionaries.ts  useFields.ts  useSearch.ts  useUploadProgress.ts  useVersions.ts
frontend/src/pages/database/: DatabaseManagementPage.tsx
frontend/src/pages/dictionaries/: DictionariesListPage.tsx  DictionaryDetailPage.tsx  DictionaryUploadPage.tsx
frontend/src/pages/search/: GlobalSearchPage.tsx
frontend/src/types/: api.ts
samples/: create_sample_geopackage.py  create_sample_sqlite.py  sample-addressbook.desc  sample-addressbook.proto  sample-books.xsd  sample-data-complex.xml  sample-data-medium.xml  sample-data-simple.xml  sample-geopackage.gpkg  sample-xml-with-dtd.xml  sample-xml-with-xsd.xml
scripts/: README.md  run-semgrep.sh
scripts/docker/: docker-build.sh  docker-run-postgres.sh  docker-run-sqlite.sh
