[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-dictionary-generator"
version = "1.0.0"
description = "Automated data dictionary generation from JSON files with AI-powered descriptions"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Marcus Radder", email = "marcus@example.com"}
]
keywords = ["data-dictionary", "metadata", "api", "fastapi", "data-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "fastapi>=0.104.0,<0.105.0",
    "uvicorn[standard]>=0.24.0,<0.25.0",
    "sqlalchemy>=2.0.23,<2.1.0",
    "alembic>=1.12.0,<1.13.0",
    "pydantic>=2.5.0,<2.6.0",
    "pydantic-settings>=2.1.0,<2.2.0",
    "psycopg2-binary>=2.9.9,<2.10.0",
    "python-multipart>=0.0.6,<0.1.0",
    "openai>=1.3.0,<2.0.0",
    "tiktoken>=0.5.0,<0.6.0",
    "pandas>=2.1.0,<2.2.0",
    "numpy>=1.26.0,<2.0.0",
    "ijson>=3.2.0,<3.3.0",
    "openpyxl>=3.1.0,<3.2.0",
    "python-json-logger>=2.0.7,<2.1.0",
    "tenacity>=8.2.0,<8.3.0",
    "redis>=5.0.0,<6.0.0",
    "python-dotenv>=1.0.0,<1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<7.5.0",
    "pytest-asyncio>=0.21.0,<0.22.0",
    "pytest-cov>=4.1.0,<4.2.0",
    "httpx>=0.25.0,<0.26.0",
    "ruff>=0.1.5,<0.2.0",
    "mypy>=1.7.0,<1.8.0",
    "pre-commit>=3.5.0,<3.6.0",
    "ipython>=8.18.0,<8.19.0",
    "types-redis>=4.6.0,<4.7.0",
]

[project.urls]
Homepage = "https://github.com/marcusradder/data-dictionary-gen"
Documentation = "https://github.com/marcusradder/data-dictionary-gen/docs"
Repository = "https://github.com/marcusradder/data-dictionary-gen"
Issues = "https://github.com/marcusradder/data-dictionary-gen/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "ijson.*",
    "openpyxl.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
exclude_dirs = [
    "tests",
    "migrations",
    "venv",
    ".venv",
    "__pycache__",
]
skips = [
    "B101",  # assert_used - common in tests
]
tests = ["B201", "B301", "B302", "B303", "B304", "B305", "B306", "B307", "B308", "B309", "B310", "B311", "B312", "B313", "B314", "B315", "B316", "B317", "B318", "B319", "B320", "B321", "B322", "B323", "B324", "B325", "B401", "B402", "B403", "B404", "B405", "B406", "B407", "B408", "B409", "B410", "B411", "B412", "B413", "B501", "B502", "B503", "B504", "B505", "B506", "B507", "B601", "B602", "B603", "B604", "B605", "B606", "B607", "B608", "B609", "B610", "B611", "B701", "B702", "B703"]
